--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.7",
     "lenis": "^1.2.3",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-parallax-tilt": "^1.7.288",
