--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-parallax-tilt": "^1.7.288",
     "react-router-dom": "^7.4.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.17",
     "tilt.js": "^1.2.1"
   },
