--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.288",
     "react-router-dom": "^7.4.1",
     "split-type": "^0.3.4",
