--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.0.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.7",
     "lenis": "^1.2.3",
@@ -23,11 +28,14 @@
     "react-router-dom": "^7.4.1",
     "split-type": "^0.3.4",
     "swiper": "^11.2.6",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
-    "tilt.js": "^1.2.1"
+    "tilt.js": "^1.2.1",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
